css for help anchors

--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -978,6 +978,11 @@
             padding: 4px 10px;
         }
         
+        .lm-button a {
+            color: #000;
+            text-decoration: none;
+        }
+        
             .lm-button:hover {
                 background: #ddd;
             }
