--- a/slider/templates/masters.html
+++ b/slider/templates/masters.html
@@ -1,19 +1,15 @@
-<div class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Masters <span class="caret"></span></a>
-    <ul class="dropdown-menu" role="menu">
-        <li>
-            <a href="#" ng-click="importUfo();">Import ufo...</a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#" ng-click="duplicateMaster();">Duplicate</a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#" ng-click="deleteMaster();">Delete...</a>
-        </li>
-    </ul>
-</div>
+<localmenu class="localmenu" class="left">
+    <div class="lm-head" ng-mousedown="data.selectMenu('masters')">
+        <b>Masters</b>
+    </div>
+    <div class="lm-body" ng-if="data.localmenu.masters">
+        <div class="lm-button" ng-mouseup="importUfo()">Import ufo...</div>
+        <div class="lm-divider"></div>
+        <div class="lm-button" ng-mouseup="duplicateMaster()">Duplicate</div>
+        <div class="lm-divider"></div>
+        <div class="lm-button" ng-mouseup="deleteMaster()">Delete...</div>
+    </div>
+</localmenu>
 
 <ul>
     <li ng-repeat="sequence in data.sequences">
@@ -40,7 +36,7 @@
     <div id="duplicate-master" ng-click="duplicateMaster();" class="master-tool">
         <img src="img/duplicateMaster.png">
     </div>
-    <div id="delete-master" ng-click="deleteMaster();" class="master-tool">
-        <img src="img/deleteMaster.png">
+    <div id="delete-master" ng-click="cloneMaster();" class="master-tool">
+        <img src="img/cloneMaster.png">
     </div>
 </div>
