#347 new instance always balanced slider values

--- a/slider/templates/instances.html
+++ b/slider/templates/instances.html
@@ -23,6 +23,8 @@
     </li>
 </ul>
 
+{{currentInstance}}
+
 <div id="instances-tools">
     <div id="add-instance" ng-click="data.addInstance();" class="instance-tool" ng-class="{'inactive': !data.canAddInstance()}">
         <img src="img/addInstance.png">
