#347 always work on current instance

--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -39,6 +39,14 @@
     }
 
 
+
+
+/****** testing stuff *****/
+	
+	.currentinstance {
+	    background: purple!important;
+	}
+	
 	
 	
 /****** menu *****/
