--- a/slider/templates/instances.html
+++ b/slider/templates/instances.html
@@ -23,7 +23,8 @@
     </li>
 </ul>
 
-{{data.currentInstance}}
+{{data.currentInstance}}<br><br>
+{{data.currentDesignSpace}}
 
 <div id="instances-tools">
     <div id="add-instance" ng-click="data.addInstance();" class="instance-tool" ng-class="{'inactive': !data.canAddInstance()}">
