--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -37,8 +37,38 @@
         width: 30%;
         padding: 20px;
     }
+    
+    .unselectable {                
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+    
+    .selectable {
+        -webkit-touch-callout: all;
+        -webkit-user-select: all;
+        -khtml-user-select: all;
+        -moz-user-select: all;
+        -ms-user-select: all;
+        user-select: all;
+    } 
+    
+    .rename {
+        cursor: default;
+    }
 
-
+    .renaming {
+        cursor: text;
+        -webkit-touch-callout: text;
+        -webkit-user-select: text;
+        -khtml-user-select: text;
+        -moz-user-select: text;
+        -ms-user-select: text;
+        user-select: text;
+    }
 
 
 /****** testing stuff *****/
@@ -422,14 +452,7 @@
                     display: block;
                 }
                 
-    .unselectable {                
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
+
            
     .rubberband {
         background: rgba(0, 0, 0, 0.1);
