--- a/slider/templates/masters.html
+++ b/slider/templates/masters.html
@@ -18,12 +18,8 @@
                 <span class="list-sequence-col" ng-class="{start : $first && !$last, end : $last, middle : $middle, solo : $first && $last}" ng-mouseover="whileDrag(master, $index)" ng-mousedown="startDrag(master, $index)">
                     <div class="diamond"></div>
                 </span>
-                <span class="list-view-col" ng-click="master.display = !master.display" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};">
-                    Ag
-                </span>
-                <span class="list-edit-col"  ng-class="{'selected': master.edit}">
-                    {{master.name}}
-                </span>
+                <span class="list-view-col rename" ng-model="data.preview" ng-click="master.display = !master.display" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};"></span>
+                <span class="list-edit-col rename" ng-model="master.name" ng-class="{'selected': master.edit}"></span>
             </li>
         </ul>
     </li>
