#347 multiselect only on masters list

--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -61,13 +61,13 @@
     }
 
     .renaming {
-        cursor: text;
-        -webkit-touch-callout: text;
-        -webkit-user-select: text;
-        -khtml-user-select: text;
-        -moz-user-select: text;
-        -ms-user-select: text;
-        user-select: text;
+        cursor: text!important;
+        -webkit-touch-callout: text!important;
+        -webkit-user-select: text!important;
+        -khtml-user-select: text!important;
+        -moz-user-select: text!important;
+        -ms-user-select: text!important;
+        user-select: text!important;
     }
 
 
