--- a/slider/templates/specimen.html
+++ b/slider/templates/specimen.html
@@ -14,7 +14,7 @@
 </div>
 
 
-<div id="specimen-content" rubberband>   
+<div id="specimen-content" rubberband viewport-watcher>   
     <!-- standard view -->
     <div id="non-glyph-range" ng-if="selectedSpecimen.name != 'glyph range'">
         <ul ng-style="{'font-size': fontSize + 'px', 'line-height': (fontSize * lineHeight) + 'px'}">
