#347 start of blue diamonds

--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -723,6 +723,15 @@
         
         
         
+        
+/**************** blue diamonds ************************/
+
+
+    .blue-diamond {
+        fill: #7DADFF;
+    }
+
+        
 
 /**************** masters ************************/
 
