--- a/slider/templates/designspace.html
+++ b/slider/templates/designspace.html
@@ -32,8 +32,8 @@
     
     <div class="drop-area" ng-show="data.currentDesignSpace.type != 'x'">
         <control ng-if="data.currentDesignSpace.type == 'Control'">
-            <div class="slider-input-container" ng-repeat="axis in data.currentDesignSpace.axes" ng-style="{'top': ($index * 50 + 45) + 'px'}">
-                <input ng-model="data.currentDesignSpace.axes[$index].value" class="slider-input-output">%
+            <div class="slider-input-container" ng-repeat="axis in data.currentInstance.axes" ng-style="{'top': ($index * 50 + 45) + 'px'}">
+                <input ng-model="axis.value" class="slider-input-output">%
             </div>
             <select class="left-label-select" ng-change="changeMainMaster()" ng-model="data.currentDesignSpace.mainMaster" ng-options="index as data.findMaster(master.masterId).name for (index, master) in data.currentDesignSpace.masters" ng-style="{'top': ((data.currentDesignSpace.masters.length - 2) * 50 + 43) + 'px'}" ng-if="data.currentDesignSpace.masters.length > 2"></select>
         </control>
