#337 hooking up the rubberband to the purple

--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -2,8 +2,7 @@
     <span>{{data.projectName}}</span>
 </div>
 <div ng-repeat="sequence in data.sequences">
-
-    <div class="inspector-branche" style="display: block" ng-repeat="master in sequence.masters"  ng-if="master.edit">
+    <div class="inspector-branche" style="display: block" ng-repeat="master in sequence.masters"  ng-if="master.edit && master.type != 'test'">
         <div class="inspector-header">
             <arrow></arrow>
             <span ng-class="{'inspector-inactive' : !master.edit}">{{master.name}}</span>
