--- a/purple-pill/templates/specimen.html
+++ b/purple-pill/templates/specimen.html
@@ -15,11 +15,23 @@
 
 
 <div id="specimen-content" rubberband viewport-watcher>   
+    <!-- standard view -->
     <div id="non-glyph-range" ng-if="selectedSpecimen.name != 'glyph range'">
         <ul>
-            <li ng-repeat="glyph in filteredGlyphs track by glyph.glyphId" ng-style="{'height': fontSize + 'px', 'margin-bottom': (fontSize * LineHeight - fontSize) + 'px'}">
-                <glyph glyph="{{glyph.glyphName}}" class="spec-glyph-box catchme unselectable"></glyph>
+            <li ng-repeat="glyph in filteredGlyphs track by glyph.glyphId" ng-style="{'height': (fontSize * lineHeight) + 'px'}" ng-class="{'selected-glyph':askIfEditGlyph(glyph.glyphName, glyph.master.masterId, glyph.master.sequenceId)}">
+                <glyph sequence="{{glyph.master.sequenceId}}" master="{{glyph.master.masterId}}" glyph="{{glyph.glyphName}}" ng-style="{'height': fontSize + 'px'}" class="spec-glyph-box catchme unselectable"></glyph>
             </li>
         </ul>
+    </div>
+    
+    <!-- glyph range -->
+    <div id="glyph-range" ng-if="selectedSpecimen.name == 'glyph range'">
+        <div ng-repeat="sequence in data.sequences">
+            <ul class="glyph-range-master" ui-sortable="sortableOptions" ng-model="master.glyphs" ng-repeat="master in sequence.masters" ng-if="master.display && master.type == 'redpill'" class="glyph-range">
+                <li ng-class="{'selected-glyph':glyph.edit}" ng-style="{'margin': (fontSize / 6) + 'px'}" ng-repeat="glyph in filteredRangeGlyphs=(master.glyphs | rangeFilter:filterOptions.filter)" class="no-rubberband spec-glyph-box-range">
+                    <glyph sequence="{{$grandparent.$index}}" master="{{$parent.$index}}" glyph="{{glyph.value}}" ng-style="{'height': fontSize + 'px'}" class="spec-glyph-box catchme unselectable no-rubberband"></glyph>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
