#337 filter glyph input (linebreaks and foreign input)

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -885,6 +885,11 @@
             cursor: default;
         }
         
+            .list-view-col svg {
+                height: 90%;
+                margin-top: 10%;
+            }
+        
             .list-view-col.selected {
                 background: #f85c37;
             }
