--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -158,7 +158,7 @@
 			    overflow-x: hidden;
 			    position: relative;
 				background: #fff;
-				border: 4px solid #d7d2c8;
+				/*border: 4px solid #d7d2c8;*/
 			}
 			
 			.semi-panel {
@@ -1149,3 +1149,35 @@
         padding: 40px;
         box-shadow: 0 0 8px rgba(0,0,0,0.8);
     }
+    
+    
+    
+    
+/**************** dividers ************************/
+
+
+    divider {
+        position: absolute;
+        top: 0;
+        z-index: 100;
+        height: 100%;
+        width: 4px;
+        background: #d7d2c8;
+        cursor: ew-resize;
+        padding: 30px 0;
+        border-left: 1px solid transparent;
+    }
+    
+    divider:after {
+        position: absolute;
+        left: -4px;
+        top: 0;
+        content: " ";
+        width: 3px;
+        height: 100%;
+        background: #d7d2c8;
+    }
+    
+        divider:hover {
+            border-left: 1px dashed #fff;
+        }
