--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -854,20 +854,42 @@
                     height: 100%;
                 }
                 
-                    .list-sequence-col.start .diamond {
-                        background-image: url('../img/diamonds/diamond-top.png');
+                    instances .list-sequence-col.start .diamond {
+                       /*background-image: url('../img/diamonds/diamond-top.png');*/
+                       background-image: url('../img/diamonds/diamond-sole.png');
                     }
                     
-                    .list-sequence-col.middle .diamond {
-                        background-image: url('../img/diamonds/diamond-full.png');
+                    instances .list-sequence-col.middle .diamond {
+                        /*background-image: url('../img/diamonds/diamond-full.png');*/
+                       background-image: url('../img/diamonds/diamond-sole.png');
                     }
                     
-                    .list-sequence-col.end .diamond {
-                        background-image: url('../img/diamonds/diamond-bottom.png');
+                    instances .list-sequence-col.end .diamond {
+                       /*background-image: url('../img/diamonds/diamond-bottom.png');*/
+                       background-image: url('../img/diamonds/diamond-sole.png');
                     }
                     
-                    .list-sequence-col.solo .diamond {
+                    instances .list-sequence-col.solo .diamond {
                         background-image: url('../img/diamonds/diamond-sole.png');
+                    }
+                    
+                    masters .list-sequence-col.start .diamond {
+                       /*background-image: url('../img/diamonds/diamond-top.png');*/
+                       background-image: url('../img/diamonds/dot-sole.png');
+                    }
+                    
+                    masters .list-sequence-col.middle .diamond {
+                        /*background-image: url('../img/diamonds/diamond-full.png');*/
+                       background-image: url('../img/diamonds/dot-sole.png');
+                    }
+                    
+                    masters .list-sequence-col.end .diamond {
+                       /*background-image: url('../img/diamonds/diamond-bottom.png');*/
+                       background-image: url('../img/diamonds/dot-sole.png');
+                    }
+                    
+                    masters .list-sequence-col.solo .diamond {
+                        background-image: url('../img/diamonds/dot-sole.png');
                     }
                     
                     /* while dragging */
@@ -1162,7 +1184,7 @@
         z-index: 100;
         height: 100%;
         width: 4px;
-        background: #d7d2c8;
+        background: transparent;
         cursor: ew-resize;
         padding: 30px 0;
         border-left: 1px solid transparent;
@@ -1179,5 +1201,6 @@
     }
     
         divider:hover {
+            background: #d7d2c8;
             border-left: 1px dashed #fff;
         }
