#340 hover on lm-buttons for all browsers

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1102,6 +1102,10 @@
                 background: #ddd;
             }
             
+            .lm-button.lm-button-hover {
+                background: #ddd;
+            }
+            
        .lm-divider {
            margin: 4px 0;
            background: #ddd;
