--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -19,18 +19,45 @@
 </div>
 
 <div id="parameters-selection">
-    <div class="parameters-selection-head">Master</div>
+    <div class="parameters-selection-head">Master</div><div class="parameters-add" ng-click="parametersWindow($event, 1)">+</div>
     <div class="parameters-selection-body">
         <div ng-repeat="(key, value) in data.masterParameters">
             <div class="parameter-key">{{key}} =</div><div class="parameter-value">{{value}}</div>
         </div>
     </div>
     
-    <div class="parameters-selection-head">Glyph</div>
+    <div class="parameters-selection-head">Glyph</div><div class="parameters-add" ng-click="parametersWindow($event, 2)">+</div>
     <div class="parameters-selection-body">
         <div ng-repeat="(key, value) in data.glyphParameters">
             <div class="parameter-key">{{key}} =</div><div class="parameter-value">{{value}}</div>
         </div>
+    </div>
+</div>
+
+{{data.parametersPanel}}
+
+<div id="parameters-control-panel" ng-if="data.parametersPanel > 0" ng-style="{'top': parameterPanelTop}">
+    <div id="control-panel-parameters">
+        <div class="control-panel-parameter control-panel-button">Width</div>
+        <div class="control-panel-parameter control-panel-button">Height</div>
+        <div class="control-panel-parameter control-panel-button">X-Height</div>
+        <div class="control-panel-parameter control-panel-button">Slant</div>
+        <div class="control-panel-parameter control-panel-button">Spacing</div>
+        <div class="control-panel-parameter control-panel-button">Sidebearings</div>
+        <div class="control-panel-parameter control-panel-button">Tension</div>
+        <div class="control-panel-parameter control-panel-button">Weight</div>
+    </div>
+    <div id="control-panel-operators">
+        <div class="control-panel-operator control-panel-button">=</div>
+        <div class="control-panel-operator control-panel-button">x</div>
+        <div class="control-panel-operator control-panel-button">÷</div>
+        <div class="control-panel-operator control-panel-button">+</div>
+        <div class="control-panel-operator control-panel-button">-</div>
+        <div class="control-panel-operator control-panel-button">min</div>
+        <div class="control-panel-operator control-panel-button">max</div>
+    </div>
+    <div class="control-panel-cancel control-panel-button">
+        Cancel
     </div>
 </div>
 
